virtualmachineclassbinding removed, swagger and code generated
